appId: com.hebert.ctrlcusto
---
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
      text: "Entrar"
    timeout: 180000

- tapOn:
    id: "input-email"
- inputText: "maestro@teste.com"

- tapOn:
    id: "input-password"
- inputText: "Teste@1234"

- tapOn:
    id: "login-submit"

- extendedWaitUntil:
    visible:
      text: "Saldo"
    timeout: 30000
